--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Chat to KIT - the body image bot" />
+  <title>Chatbot KIT</title>
+</head>
+<body>
+<noscript>You need to enable JavaScript to run this app.</noscript>
+<div id="root">
 <h1>Chatbot KIT 2.0</h1>
-<div>
 <p><img src="https://www.monash.edu/__data/assets/image/0007/2861926/varieties/banner.static.medium.jpg" alt="" width="360" height="360" style="margin: 1em auto; display: block;"></p>
 <p>We are constantly bombarded with our own image on social media, in selfies and on the Zoom camera. We know that many people of all genders, ages and backgrounds are concerned about their body image.</p>
 <p>We're here to help!</p>
@@ -17,3 +27,7 @@
 <p>To give to this valuable service, please mention “KIT” in the “my choice” area of giving and <a href="https://alumni-friends.monash.edu/ascendportal/s/maprc" target="_blank">donate here</a></p>
 <p>Thank you very much from KIT and the team!</p><p>To keep up with the adventures of KIT and Dr Gemma Sharp <a href="https://twitter.com/gemmasharp11" target="_blank" rel="external" class="link--external">click here</a></p>
 </div>
+  <script src="https://www.gstatic.com/dialogflow-console/fast/messenger-cx/bootstrap.js?v=1"></script>
+  <df-messenger df-cx="true" location="australia-southeast1" chat-title="KIT-beta"
+    agent-id="b975dd3f-8aaa-4873-894e-005afbfd9d6c" language-code="en"></df-messenger>
+</body>
